--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/resources/log4j.properties
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootCategory=DEBUG, A
+log4j.rootCategory=INFO, A
 
 # Package log level definition
 log4j.category.psidev.psi.mi.xml=WARN
@@ -7,8 +7,12 @@ log4j.category.psidev.psi.mi.xml.dao=WARN
 log4j.category.psidev.psi.mi.xml.dao.inMemory=WARN
 
 log4j.category.org.apache=INFO
-log4j.category.org.ajax4jsf=INFO
+
+# spring
 log4j.category.org.springframework=INFO
+
+# jsf
+log4j.org.apache.myfaces.renderkit.html.util.DefaultAddResource=ERROR
 
 # configuration
 log4j.appender.A=org.apache.log4j.ConsoleAppender
