--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/resources/uk/ac/ebi/intact/binarysearch/default-xref-links.properties
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/resources/uk/ac/ebi/intact/binarysearch/default-xref-links.properties
@@ -11,3 +11,9 @@ uniprotkb=http://www.ebi.uniprot.org/entry/{0}
 uniparc=http://www.ebi.uniprot.org/entry/{0}
 chebi=http://www.ebi.ac.uk/chebi/searchId.do?chebiId={0}
 genbank_protein_gi=http://www.ncbi.nlm.nih.gov/entrez/viewer.fcgi?db=protein&id={0}
+
+go=http://www.ebi.ac.uk/ego/GSearch?query={0}&mode=id&ontology=all_ont
+interpro=http://www.ebi.ac.uk/interpro/ISearch?query={0}
+ensembl=http://www.ensembl.org/Homo_sapiens/searchview?species=;idx=;q={0}
+flybase=http://flybase.bio.indiana.edu/reports/{0}.html
+rcsb_pdb=http://www.pdb.org/pdb/explore/explore.do?structureId={0}
