--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,27 @@
 <?xml version = '1.0' encoding = 'ISO-8859-1'?>
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
+<!--
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
+-->
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
-         version="2.4">
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+         metadata-complete="false"
+         version="2.5">
 
     <description>Binary Search</description>
 
@@ -22,7 +41,8 @@
             Configuration file
         </description>
         <param-name>psidev.DEFAULT_CONFIG_FILE</param-name>
-        <param-value>/ebi/sp/misc1/vusers/intact/production/webapp-conf/binary-search.cfg.xml</param-value>
+        <!--<param-value>/ebi/sp/misc1/vusers/intact/production/webapp-conf/binary-search.cfg.xml</param-value>-->
+        <param-value>/tmp/binary-search.cfg.xml</param-value>
     </context-param>
     <context-param>
         <description>
@@ -83,115 +103,123 @@
         <param-value>2</param-value>
     </context-param>
 
-     <!-- JSF - MyFaces -->
-    <context-param>
-        <description>State saving method: "client" or "server" (= default)
-            See JSF Specification 2.5.3
-        </description>
-        <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
-        <param-value>server</param-value>
-    </context-param>
+    <!-- MyFaces -->
 
-    <context-param>
-        <description>If true, rendered HTML code will be formatted, so that it is "human readable".
-            i.e. additional line separators and whitespace will be written, that do not
-            influence the HTML code.
-            Default: "true"
-        </description>
-        <param-name>org.apache.myfaces.PRETTY_HTML</param-name>
-        <param-value>true</param-value>
-    </context-param>
-    <context-param>
-        <description>If true, a javascript function will be rendered that is able to restore the
-            former vertical scroll on every request. Convenient feature if you have pages
-            with long lists and you do not want the browser page to always jump to the top
-            if you trigger a link or button action that stays on the same page.
-            Default: "false"
-        </description>
-        <param-name>org.apache.myfaces.AUTO_SCROLL</param-name>
-        <param-value>true</param-value>
-    </context-param>
+    <!--<context-param>-->
+           <!--<description>Comma separated list of URIs of (additional) faces config files.-->
+               <!--(e.g. /WEB-INF/my-config.xml)-->
+               <!--See JSF 1.0 PRD2, 10.3.2-->
+               <!--Attention: You do not need to put /WEB-INF/faces-config.xml in here.-->
+           <!--</description>-->
+           <!--<param-name>javax.faces.CONFIG_FILES</param-name>-->
+           <!--<param-value>/WEB-INF/navigation-faces-config.xml</param-value>-->
+       <!--</context-param>-->
+       <context-param>
+           <description>State saving method: "client" or "server" (= default)
+               See JSF Specification 2.5.3</description>
+           <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+           <param-value>client</param-value>
+       </context-param>
+       <context-param>
+           <description>Only applicable if state saving method is "server" (= default).
+               Defines the amount (default = 20) of the latest views are stored in session.</description>
+           <param-name>org.apache.myfaces.NUMBER_OF_VIEWS_IN_SESSION</param-name>
+           <param-value>20</param-value>
+       </context-param>
+       <context-param>
+           <description>Only applicable if state saving method is "server" (= default).
+               If true (default) the state will be serialized to a byte stream before it
+               is written to the session.
+               If false the state will not be serialized to a byte stream.</description>
+           <param-name>org.apache.myfaces.SERIALIZE_STATE_IN_SESSION</param-name>
+           <param-value>true</param-value>
+       </context-param>
+       <context-param>
+           <description>Only applicable if state saving method is "server" (= default) and if
+               org.apache.myfaces.SERIALIZE_STATE_IN_SESSION is true (= default)
+               If true (default) the serialized state will be compressed before it
+               is written to the session. If false the state will not be compressed.</description>
+           <param-name>org.apache.myfaces.COMPRESS_STATE_IN_SESSION</param-name>
+           <param-value>true</param-value>
+       </context-param>
+       <context-param>
+           <description>This parameter tells MyFaces if javascript code should be allowed in the
+               rendered HTML output.
+               If javascript is allowed, command_link anchors will have javascript code
+               that submits the corresponding form.
+               If javascript is not allowed, the state saving info and nested parameters
+               will be added as url parameters.
+               Default: "true"</description>
+           <param-name>org.apache.myfaces.ALLOW_JAVASCRIPT</param-name>
+           <param-value>true</param-value>
+       </context-param>
+       <context-param>
+           <param-name>org.apache.myfaces.DETECT_JAVASCRIPT</param-name>
+           <param-value>false</param-value>
+       </context-param>
+       <context-param>
+           <description>If true, rendered HTML code will be formatted, so that it is "human readable".
+               i.e. additional line separators and whitespace will be written, that do not
+               influence the HTML code.
+               Default: "true"</description>
+           <param-name>org.apache.myfaces.PRETTY_HTML</param-name>
+           <param-value>true</param-value>
+       </context-param>
+       <context-param>
+           <description>If true, a javascript function will be rendered that is able to restore the
+               former vertical scroll on every request. Convenient feature if you have pages
+               with long lists and you do not want the browser page to always jump to the top
+               if you trigger a link or button action that stays on the same page.
+               Default: "false"</description>
+           <param-name>org.apache.myfaces.AUTO_SCROLL</param-name>
+           <param-value>true</param-value>
+       </context-param>
 
-    <context-param>
-        <description>Used for encrypting view state. Only relevant for client side
-            state saving. See MyFaces wiki/web site documentation for instructions
-            on how to configure an application for diffenent encryption strengths.
-        </description>
-        <param-name>org.apache.myfaces.SECRET</param-name>
-        <param-value>NzY1NDMyMTA=</param-value>
-    </context-param>
+       <context-param>
+           <description>Used for encrypting view state. Only relevant for client side
+               state saving. See MyFaces wiki/web site documentation for instructions
+               on how to configure an application for diffenent encryption strengths.
+           </description>
+           <param-name>org.apache.myfaces.SECRET</param-name>
+           <param-value>NzY1NDMyMTA=</param-value>
+       </context-param>
 
-    <context-param>
-        <description>
-            Validate managed beans, navigation rules and ensure that forms are not nested.
-        </description>
-        <param-name>org.apache.myfaces.VALIDATE</param-name>
-        <param-value>true</param-value>
-    </context-param>
-
-    <!-- Trinidad params -->
-    <context-param>
-        <param-name>org.apache.myfaces.trinidadinternal.DISABLE_CONTENT_COMPRESSION</param-name>
-        <param-value>false</param-value>
-    </context-param>
-
-    <context-param>
-        <param-name>org.apache.myfaces.trinidad.ALTERNATE_VIEW_HANDLER</param-name>
-        <param-value>com.sun.facelets.FaceletViewHandler</param-value>
-    </context-param>
+       <context-param>
+           <description>
+               Validate managed beans, navigation rules and ensure that forms are not nested.
+           </description>
+           <param-name>org.apache.myfaces.VALIDATE</param-name>
+           <param-value>true</param-value>
+       </context-param>
 
 
-    <context-param>
-        <param-name>org.apache.myfaces.trinidad.USE_APPLICATION_VIEW_CACHE</param-name>
-        <param-value>false</param-value>
-    </context-param>
-
-    <context-param>
-        <param-name>org.apache.myfaces.trinidad.CHANGE_PERSISTENCE</param-name>
-        <param-value>session</param-value>
-    </context-param>
-
-    <!-- Commons Chain Configuration Resources -->
-    <context-param>
-        <param-name>org.apache.commons.chain.CONFIG_WEB_RESOURCE</param-name>
-        <param-value>/WEB-INF/chain-config.xml</param-value>
-    </context-param>
-
-    <!-- Apache Shale Remoting -->
-    <context-param>
-        <param-name>
-            org.apache.shale.remoting.CLASS_RESOURCES
-        </param-name>
-        <param-value>
-            /static/*:org.apache.shale.remoting.impl.ClassResourceProcessor
-        </param-value>
-    </context-param>
-
-    <context-param>
-        <param-name>
-            org.apache.shale.remoting.DYNAMIC_RESOURCES
-        </param-name>
-        <param-value>
-            /dynamic/*:org.apache.shale.remoting.impl.MethodBindingProcessor
-        </param-value>
-    </context-param>
-
-    <context-param>
-        <param-name>
-            org.apache.shale.remoting.WEBAPP_RESOURCES
-        </param-name>
-        <param-value>
-            /webapp/*:org.apache.shale.remoting.impl.WebResourceProcessor
-        </param-value>
-    </context-param>
 
     <!-- Facelets -->
-    <!-- Use Documents Saved as *.xhtml -->
-    <context-param>
-        <param-name>javax.faces.DEFAULT_SUFFIX</param-name>
-        <param-value>.xhtml</param-value>
-    </context-param>
 
+  <context-param>
+    <param-name>org.apache.myfaces.trinidad.ALTERNATE_VIEW_HANDLER</param-name>
+    <param-value>com.sun.facelets.FaceletViewHandler</param-value>
+  </context-param>
+
+  <context-param>
+    <param-name>facelets.DEVELOPMENT</param-name>
+    <param-value>true</param-value>
+  </context-param>
+
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>
+      classpath*:*.spring.xml
+    </param-value>
+  </context-param>
+
+  <!-- Use Documents Saved as *.xhtml -->
+  <context-param>
+    <param-name>javax.faces.DEFAULT_SUFFIX</param-name>
+    <param-value>.xhtml</param-value>
+  </context-param>
+
+    <!-- Facelets -->
     <context-param>
         <param-name>facelets.LIBRARIES</param-name>
         <param-value>/WEB-INF/binarysearch.taglib.xml;
@@ -204,24 +232,44 @@
         <param-value>true</param-value>
     </context-param>
 
-    <!-- ajax4jsf -->
-    <filter>
-        <display-name>Ajax4jsf Filter</display-name>
-        <filter-name>ajax4jsf</filter-name>
-        <filter-class>org.ajax4jsf.Filter</filter-class>
-        <init-param>
-            <param-name>forceparser</param-name>
-            <param-value>false</param-value>
-        </init-param>
-    </filter>
+     <!-- Trinidad -->
+  <context-param>
+    <param-name>org.apache.myfaces.trinidad.CHANGE_PERSISTENCE</param-name>
+    <param-value>session</param-value>
+  </context-param>
+    <context-param>
+        <param-name>org.apache.myfaces.trinidad.DISABLE_CONTENT_COMPRESSION</param-name>
+        <param-value>true</param-value>
+    </context-param>
+    <context-param>
+        <param-name>org.apache.myfaces.trinidad.CHECK_FILE_MODIFICATION</param-name>
+        <param-value>true</param-value>
+    </context-param>
+    <context-param>
+        <param-name>org.apache.myfaces.trinidad.ENABLE_LIGHTWEIGHT_DIALOGS</param-name>
+        <param-value>true</param-value>
+    </context-param>
 
-    <filter-mapping>
-        <filter-name>ajax4jsf</filter-name>
-        <servlet-name>faces</servlet-name>
-        <dispatcher>REQUEST</dispatcher>
-        <dispatcher>FORWARD</dispatcher>
-        <dispatcher>INCLUDE</dispatcher>
-    </filter-mapping>
+  <!-- Orchestra Filter -->
+  <!--<filter>-->
+    <!--<filter-name>orchestraFilter</filter-name>-->
+    <!--<filter-class>org.apache.myfaces.orchestra.conversation.jsf.filter.OrchestraServletFilter</filter-class>-->
+  <!--</filter>-->
+
+  <!--<filter-mapping>-->
+    <!--<filter-name>orchestraFilter</filter-name>-->
+    <!--<servlet-name>faces</servlet-name>-->
+  <!--</filter-mapping>-->
+
+  <filter>
+    <filter-name>trinidad</filter-name>
+    <filter-class>org.apache.myfaces.trinidad.webapp.TrinidadFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>trinidad</filter-name>
+    <servlet-name>faces</servlet-name>
+  </filter-mapping>
 
     <!-- Extensions Filter -->
     <filter>
@@ -254,36 +302,12 @@
 
     <filter-mapping>
         <filter-name>extensionsFilter</filter-name>
-        <url-pattern>*.jsf</url-pattern>
+        <url-pattern>*.xhtml</url-pattern>
     </filter-mapping>
     <filter-mapping>
         <filter-name>extensionsFilter</filter-name>
         <url-pattern>/faces/*</url-pattern>
     </filter-mapping>
-
-    <!-- Shale Application Controller Filter --> 
-    <!--<filter>-->
-        <!--<filter-name>shale</filter-name>-->
-        <!--<filter-class>-->
-            <!--org.apache.shale.faces.ShaleApplicationFilter-->
-        <!--</filter-class>-->
-    <!--</filter>-->
-
-    <!-- Shale Application Controller Filter Mapping -->
-    <!--<filter-mapping>-->
-        <!--<filter-name>shale</filter-name>-->
-        <!--<url-pattern>/*</url-pattern>-->
-    <!--</filter-mapping>-->
-
-    <!--<filter>-->
-        <!--<filter-name>trinidad</filter-name>-->
-        <!--<filter-class>org.apache.myfaces.trinidad.webapp.TrinidadFilter</filter-class>-->
-    <!--</filter>-->
-
-    <!--<filter-mapping>-->
-        <!--<filter-name>trinidad</filter-name>-->
-        <!--<servlet-name>faces</servlet-name>-->
-    <!--</filter-mapping>-->
 
     <!-- Search webapp filters -->
     <!-- Security -->
@@ -302,45 +326,53 @@
         <listener-class>uk.ac.ebi.intact.binarysearch.webapp.StartupListener</listener-class>
     </listener>
 
-    <listener>
-        <description>Forces a garbage collection if more than 1000 open files are found</description>
-        <listener-class>uk.ac.ebi.faces.webapp.EvilOpenFilesListener</listener-class>
-    </listener>
-
-    <listener>
-        <listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
-    </listener>
-
-    <!-- Commons Chain Configuration Listener -->
     <!--<listener>-->
-        <!--<listener-class>-->
-            <!--org.apache.commons.chain.web.ChainListener-->
-        <!--</listener-class>-->
+        <!--<listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>-->
     <!--</listener>-->
 
+    <!-- IntAct Startup-->
+        <!--<listener>-->
+            <!--<listener-class>uk.ac.ebi.intact.webapp.BasicStartupIntactListener</listener-class>-->
+        <!--</listener>-->
 
-    <!-- Faces Servlet -->
-    <servlet>
+        <!-- Listener to force a garbage collection if too many files are open - Only works in UNIX -->
+        <listener>
+            <listener-class>uk.ac.ebi.faces.webapp.EvilOpenFilesListener</listener-class>
+        </listener>
+
+      <!-- Spring Framework 2.0 -->
+      <listener>
+        <listener-class>
+          org.springframework.web.context.ContextLoaderListener
+        </listener-class>
+      </listener>
+
+      <!-- Orchestra stuff -->
+      <!--<listener>-->
+          <!--<listener-class>org.apache.myfaces.orchestra.conversation.servlet.ConversationManagerSessionListener</listener-class>-->
+      <!--</listener>-->
+
+      <!-- Faces Servlet -->
+      <servlet>
         <servlet-name>faces</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-    </servlet>
+      </servlet>
 
-    <!-- resource loader servlet -->
-    <!--<servlet>-->
-        <!--<servlet-name>resources</servlet-name>-->
-        <!--<servlet-class>org.apache.myfaces.trinidad.webapp.ResourceServlet</servlet-class>-->
-    <!--</servlet>-->
-
-    <!-- Faces Servlet Mappings -->
-    <servlet-mapping>
+      <servlet-mapping>
         <servlet-name>faces</servlet-name>
-        <url-pattern>/faces/*</url-pattern>
-    </servlet-mapping>
+        <url-pattern>*.xhtml</url-pattern>
+      </servlet-mapping>
 
-    <!--<servlet-mapping>-->
-        <!--<servlet-name>resources</servlet-name>-->
-        <!--<url-pattern>/adf/*</url-pattern>-->
-    <!--</servlet-mapping>-->
+      <!-- resource loader servlet -->
+      <servlet>
+        <servlet-name>resources</servlet-name>
+        <servlet-class>org.apache.myfaces.trinidad.webapp.ResourceServlet</servlet-class>
+      </servlet>
+
+      <servlet-mapping>
+        <servlet-name>resources</servlet-name>
+        <url-pattern>/adf/*</url-pattern>
+      </servlet-mapping>
 
     <!-- Welcome files -->
     <welcome-file-list>
