Commit for test.

--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Struts.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Struts.properties
@@ -32,6 +32,12 @@ sidebar.psi.section.title=PSI-MI Download
 sidebar.psi.button.submit=Download
 sidebar.psi.button.submit.title=Download that interaction network in PSI-XML format
 
+# PSI download
+sidebar.cytoscape.section.title=Cytoscape Export
+sidebar.cytoscape.button.submit=Export
+sidebar.cytoscape.button.submit.title=Export that interaction network to Cytoscape Webstart
+
+
 # Mine
 sidebar.mine.section.title=Mine
 sidebar.mine.button.submit=Clear path
