--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Search.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Search.properties
@@ -13,3 +13,10 @@ search.parameter.class.value=
 # "database" to get data from DatabaseService
 # "local" to get data from LocalIndexDataService
 search.source.name=local
+
+
+
+# Here you can specify the path to the local index files
+# which you will need if you are using the LocalIndexDastService
+#example: "/ebi/sp/pro6/intact/public-tomcat/psimitab-index/current"
+search.source.local.index.path=C:\\Documents and Settings\\nneuhaus\\Desktop\\current
