--- a/repo/site/trunk/intact-kickstart/pom.xml
+++ b/repo/site/trunk/intact-kickstart/pom.xml
@@ -15,6 +15,28 @@
     <name>IntAct Sites :: Kickstart</name>
     <version>1.0-SNAPSHOT</version>
 
+    <profiles>
+    <profile>
+      <id>default-tools.jar</id>
+      <activation>
+        <property>
+          <name>java.vendor</name>
+          <value>Sun Microsystems Inc.</value>
+       </property>
+     </activation>
+      <dependencies>
+        <dependency>
+          <groupId>com.sun</groupId>
+          <artifactId>tools</artifactId>
+          <version>1.4.2</version>
+          <scope>system</scope>
+          <systemPath>${java.home}/../lib/tools.jar</systemPath>
+       </dependency>
+     </dependencies>
+   </profile>
+ </profiles>
+
+
     <dependencies>
         <!-- IntAct dependencies -->
         <dependency>
