--- a/repo/service/trunk/search/binary/binary-webservice/wsclient/pom.xml
+++ b/repo/service/trunk/search/binary/binary-webservice/wsclient/pom.xml
@@ -200,13 +200,6 @@
             <artifactId>xfire-jsr181-api</artifactId>
             <version>1.0-M1</version>
         </dependency>
-        <dependency>
-            <groupId>sun.jdk</groupId>
-            <artifactId>tools</artifactId>
-            <version>1.5.0</version>
-            <scope>system</scope>
-            <systemPath>${java.home}/../lib/tools.jar</systemPath>
-        </dependency>
 
         <dependency>
             <groupId>javax.xml.bind</groupId>
@@ -220,6 +213,27 @@
         </dependency>
 
     </dependencies>
+
+    <profiles>
+    <profile>
+      <id>default-tools.jar</id>
+      <activation>
+        <property>
+          <name>java.vendor</name>
+          <value>Sun Microsystems Inc.</value>
+       </property>
+     </activation>
+      <dependencies>
+        <dependency>
+          <groupId>com.sun</groupId>
+          <artifactId>tools</artifactId>
+          <version>1.5.0</version>
+          <scope>system</scope>
+          <systemPath>${java.home}/../lib/tools.jar</systemPath>
+       </dependency>
+     </dependencies>
+   </profile>
+ </profiles>
 
     <pluginRepositories>
         <pluginRepository>
