--- a/repo/bridges/trunk/intact-picr/pom.xml
+++ b/repo/bridges/trunk/intact-picr/pom.xml
@@ -41,6 +41,28 @@
         </plugins>
     </build>
 
+    <profiles>
+    <profile>
+      <id>default-tools.jar</id>
+      <activation>
+        <property>
+          <name>java.vendor</name>
+          <value>Sun Microsystems Inc.</value>
+       </property>
+     </activation>
+      <dependencies>
+        <dependency>
+          <groupId>com.sun</groupId>
+          <artifactId>tools</artifactId>
+          <version>1.5.0</version>
+          <scope>system</scope>
+          <systemPath>${java.home}/../lib/tools.jar</systemPath>
+       </dependency>
+     </dependencies>
+   </profile>
+ </profiles>
+
+
     <dependencies>
         <!-- JAX-WS -->
         <dependency>
@@ -50,13 +72,6 @@
         <dependency>
             <groupId>xfire</groupId>
             <artifactId>xfire-jsr181-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>sun.jdk</groupId>
-            <artifactId>tools</artifactId>
-            <version>1.5.0</version>
-            <scope>system</scope>
-            <systemPath>${java.home}/../lib/tools.jar</systemPath>
         </dependency>
     </dependencies>
 
