Using latest bridges, which work with mac os

--- a/repo/data-exchange/trunk/intact-enricher/pom.xml
+++ b/repo/data-exchange/trunk/intact-enricher/pom.xml
@@ -16,7 +16,7 @@
     <name>IntAct Data Exchange :: Enricher</name>
 
     <properties>
-        <bridges.version>2.0.1</bridges.version>
+        <bridges.version>2.0.2-SNAPSHOT</bridges.version>
     </properties>
 
     <dependencies>
