--- a/repo/service/trunk/predict/predict-app/src/main/resources/log4j.properties
+++ b/repo/service/trunk/predict/predict-app/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 
-log4j.rootCategory=INFO, A
+log4j.rootCategory=WARN, A
 
 log4j.category.org.apache=INFO
 
@@ -23,11 +23,11 @@ log4j.category.org.hibernate.type=INFO
 #Log all SQL DDL statements as they are executed
 log4j.category.org.hibernate.tool.hbm2ddl=INFO
 #Log the state of all entities (max 20 entities) associated with the session at flush time
-log4j.category.org.hibernate.pretty=DEBUG
+log4j.category.org.hibernate.pretty=INFO
 #Log all second-level cache activity
-log4j.category.org.hibernate.cache=DEBUG
+log4j.category.org.hibernate.cache=INFO
 #Log transaction related activity
-log4j.category.org.hibernate.transaction=DEBUG
+log4j.category.org.hibernate.transaction=INFO
 #Log all JDBC resource acquisition
 log4j.category.org.hibernate.jdbc=INFO
 #Log HQL and SQL ASTs during query parsing
