The app is not reading the init-params in the web.xml

--- a/repo/service/trunk/mine/mine-app/src/main/resources/log4j.properties
+++ b/repo/service/trunk/mine/mine-app/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 
-log4j.rootCategory=INFO, A
+log4j.rootCategory=WARN, A
 
-log4j.category.uk.ac.ebi.intact=DEBUG
+log4j.category.uk.ac.ebi.intact=INFO
 log4j.category.uk.ac.ebi.intact.persistence.util=INFO
 log4j.category.uk.ac.ebi.intact.persistence.dao.IntactTransaction=INFO
 log4j.category.uk.ac.ebi.intact.model.IntactIdGenerator=INFO
@@ -29,15 +29,15 @@ log4j.category.org.hibernate.type=INFO
 #Log all SQL DDL statements as they are executed
 log4j.category.org.hibernate.tool.hbm2ddl=INFO
 #Log the state of all entities (max 20 entities) associated with the session at flush time
-log4j.category.org.hibernate.pretty=DEBUG
+log4j.category.org.hibernate.pretty=INFO
 #Log all second-level cache activity
-log4j.category.org.hibernate.cache=DEBUG
+log4j.category.org.hibernate.cache=INFO
 #Log transaction related activity
 log4j.category.org.hibernate.transaction=INFO
 #Log all JDBC resource acquisition
 log4j.category.org.hibernate.jdbc=INFO
 #Log HQL and SQL ASTs during query parsing
-log4j.category.org.hibernate.hql.ast.AST=DEBUG
+log4j.category.org.hibernate.hql.ast.AST=INFO
 #Log all JAAS authorization requests
 log4j.category.org.hibernate.secure=INFO
 
