- Removed IntactContext usage - Allow to directly access the GenerateImage servlet

--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Struts.properties
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/src/main/resources/config/Struts.properties
@@ -9,7 +9,7 @@
 ##########
 
 # Search
-sidebar.search.section.title=Interactor
+sidebar.search.section.title=Query
 sidebar.search.button.submit=Search
 sidebar.search.button.submit.title=Displays an interation network
 sidebar.search.button.add=Add
@@ -63,18 +63,18 @@ error.search.process=An error occured while trying to search in the database: {0
 error.protein.notFound=Interactor not found: {0}
 error.datasource.notCreated=No datasource available, please restart the application: <a href="{0}">home page</a>
 error.interactionNetwork.notCreated=Unable to create the interaction network: {0}
-error.interactionNetwork.noProteinFound=The retreived interaction network is empty (no protein)
+error.interactionNetwork.noProteinFound=The retreived interaction network is empty (no proteins)
 error.tulip.processing=An error occurred while trying to calculate coordinates: <br>{0}
 error.ImageBean.build=Unable to create the interaction network picture
 error.max.interactions.reached=More than {0} Interactions found.
 
 # Used by : CenteredAction
-error.centeredAC.required=An AC is required to centered the view.
-error.addAC.required=An valid AC is required to expand the interaction network.
+error.centeredAC.required=An AC is required to center the view.
+error.addAC.required=A valid AC is required to expand the interaction network.
 
 
 # Used by : SourceAction
-error.keys.required=one or some keys are required
+error.keys.required=One or more keys are required
 
 # Used by : InteractionNetworkAction
 error.graph.command.notRecognized=That command is not supported: {0}
@@ -83,7 +83,7 @@ error.graph.command.notRecognized=That command is not supported: {0}
 error.source.UrlMalformed=The URL of the given source is malformed: {0}
 
 # Used in DisplayAction
-error.source.unusable=The specified source ({0}) is not allowed or doesn't exists
+error.source.unusable=The specified source ({0}) is not allowed or it does not exist
 
 
 # ACTION MESSAGE
