It does not use a db.alias

--- a/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/pom.xml
+++ b/repo/service/trunk/hierarch-view/legacy/hierarch-view-app/pom.xml
@@ -21,6 +21,7 @@
 
     <properties>
         <jetty.port>9090</jetty.port>
+        <db.alias>nodb</db.alias>
     </properties>
 
     <dependencies>
