--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/resources/uk/ac/ebi/intact/binarysearch/default-xref-links.properties
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/resources/uk/ac/ebi/intact/binarysearch/default-xref-links.properties
@@ -18,3 +18,4 @@ ensembl=http://www.ensembl.org/Homo_sapiens/searchview?species=;idx=;q={0}
 flybase=http://flybase.bio.indiana.edu/reports/{0}.html
 rcsb_pdb=http://www.pdb.org/pdb/explore/explore.do?structureId={0}
 rgd=http://rgd.mcw.edu/tools/genes/genes_view.cgi?id={0}
+huge=http://www.kazusa.or.jp/huge/gfpage/{0}/
