--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/resources/log4j.properties
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/resources/log4j.properties
@@ -12,7 +12,7 @@ log4j.category.org.apache=INFO
 log4j.category.org.springframework=INFO
 
 # jsf
-log4j.org.apache.myfaces.renderkit.html.util.DefaultAddResource=ERROR
+log4j.category.org.apache.myfaces.renderkit.html.util.DefaultAddResource=ERROR
 
 # configuration
 log4j.appender.A=org.apache.log4j.ConsoleAppender
