Some booleans changed to EL expressions to work with backwards compatibility with jsp 2.0

--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/resources/log4j.properties
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/resources/log4j.properties
@@ -6,6 +6,8 @@ log4j.category.psidev.psi.mi.xml.converter=WARN
 log4j.category.psidev.psi.mi.xml.dao=WARN
 log4j.category.psidev.psi.mi.xml.dao.inMemory=WARN
 
+log4j.category.uk.ac.ebi.faces.webapp.EvilOpenFilesThread=FATAL
+
 log4j.category.org.apache=INFO
 
 # spring
