--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/web.xml
@@ -42,7 +42,7 @@
         </description>
         <param-name>psidev.DEFAULT_CONFIG_FILE</param-name>
         <!--<param-value>/ebi/sp/misc1/vusers/intact/production/webapp-conf/binary-search.cfg.xml</param-value>-->
-        <param-value>/tmp/binary-search.cfg.xml</param-value>
+        <param-value>d:/temp/binary-search.cfg.xml</param-value>
     </context-param>
     <context-param>
         <description>
