--- a/repo/service/trunk/search/binary/binary-search-webapp/pom.xml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/pom.xml
@@ -79,16 +79,11 @@
             </activation>
             <dependencies>
                 <dependency>
-                    <groupId>javax.el</groupId>
-                    <artifactId>el-api</artifactId>
-                    <version>1.0</version>
-                </dependency>
+    <groupId>org.apache.tomcat</groupId>
+    <artifactId>jasper-el</artifactId>
+    <version>6.0.14</version>
+</dependency>
 
-                <dependency>
-                    <groupId>com.sun.el</groupId>
-                    <artifactId>el-ri</artifactId>
-                    <version>1.0</version>
-                </dependency>
             </dependencies>
         </profile>
     </profiles>
