--- a/repo/service/branches/binary-search-webapp-dgi/pom.xml
+++ b/repo/service/branches/binary-search-webapp-dgi/pom.xml
@@ -25,7 +25,7 @@
     </properties>
 
     <build>
-        <finalName>intact-binary-search-${buildNumber}</finalName>
+        <finalName>intact-binary-search-dgi-${buildNumber}</finalName>
 
          <resources>
             <resource>
